Issue #13757: Change os.fdlistdir() so that it duplicates the passed file descriptor (instead of closing it).